prod/tvplatform-admin-frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tvplatform-admin-frontend
  namespace: default
spec:
  type: NodePort
  selector:
    app: tvplatform-admin-frontend
    env: prod
  ports:
  - name: http
    port: 80 # svc port
    targetPort: 3000 # app port
    # nodePort: 30002  # Port accessible externally on each node
