prod/tvplatform-admin-frontend/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: tvplatform-admin-frontend-certificate
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: tvplatform-admin-frontend
  namespace: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.admin.dev-ooro.co.uk
        - admin.dev-ooro.co.uk
      secretName: tvplatform-admin-frontend-certificate
  rules:
    - host: www.admin.dev-ooro.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tvplatform-admin-frontend
                port:
                  number: 80
    - host: admin.dev-ooro.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tvplatform-admin-frontend
                port:
                  number: 80
